tests/unit/guardrails/block-hostpath-volumes/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-no-volumes
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/kyverno-demo-unsigned:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-emptydir
spec:
  volumes:
    - name: scratch
      emptyDir: {}
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/kyverno-demo-unsigned:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-hostpath
spec:
  volumes:
    - name: host-vol
      hostPath:
        path: /etc
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/kyverno-demo-unsigned:1.0.0
